--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "ws": "^8.8.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/ws": "^8.5.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
